# ComfyUI-ExtendIPAdapterClipVision

./: CrossAttentionPatch.py  README.md  image_proj_models.py  nodes.py  pyproject.toml  utils.py
.github/workflows/: publish.yml
